Integrate JPro Maven plugin and dependencies into the Komet project